[package]
name = "realis-service"
version = "0.9.18"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
rand = "0.8.5"

# Substrate Client
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
beefy-gadget = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.18" }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-staking = { path = "../../frame/staking-pool" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# External Crates
futures = "0.3.17"
hex-literal = "0.3.4"
tracing = "0.1.29"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
kvdb = "0.11.0"
kvdb-rocksdb = { version = "0.15.2", optional = true }
async-trait = "0.1.51"
lru = "0.7"

# Polkadot
polkadot-node-core-parachains-inherent = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
polkadot-overseer = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
polkadot-client = { package = "client", default-features = false, path = "../client", optional = true }
polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
polkadot-primitives = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
polkadot-node-primitives = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
polkadot-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
polkadot-subsystem = { package = "polkadot-node-subsystem", default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
polkadot-node-subsystem-util = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
polkadot-runtime-parachains = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
polkadot-node-network-protocol = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }

# Polkadot Runtimes
node-runtime = { path = "../runtime", package = "realis-node-runtime", optional = true }
node-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# Polkadot Subsystems
polkadot-approval-distribution = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-availability-bitfield-distribution = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-availability-distribution = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-availability-recovery = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-collator-protocol = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-dispute-distribution = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-gossip-support = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-network-bridge = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-node-collation-generation = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-node-core-approval-voting = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-node-core-av-store = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-node-core-backing = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-node-core-bitfield-signing = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-node-core-candidate-validation = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-node-core-chain-api = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-node-core-chain-selection = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-node-core-dispute-coordinator = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
#polkadot-node-core-dispute-participation = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-node-core-provisioner = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-node-core-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }
polkadot-statement-distribution = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", optional = true }

[dev-dependencies]
polkadot-test-client = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
polkadot-node-subsystem-test-helpers = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
env_logger = "0.9.0"
log = "0.4.14"
assert_matches = "1.5.0"

[features]
default = ["db", "full-node", "polkadot-native"]

db = [
    "service/db"
]

full-node = [
    "polkadot-node-core-av-store",
    "polkadot-node-core-approval-voting",
    "polkadot-availability-bitfield-distribution",
    "polkadot-availability-distribution",
    "polkadot-availability-recovery",
    "polkadot-client",
    "polkadot-collator-protocol",
    "polkadot-dispute-distribution",
    "polkadot-gossip-support",
    "polkadot-network-bridge",
    "polkadot-node-collation-generation",
    "polkadot-node-core-backing",
    "polkadot-node-core-bitfield-signing",
    "polkadot-node-core-candidate-validation",
    "polkadot-node-core-chain-api",
    "polkadot-node-core-chain-selection",
    "polkadot-node-core-dispute-coordinator",
#    "polkadot-node-core-dispute-participation",
    "polkadot-node-core-provisioner",
    "polkadot-node-core-runtime-api",
    "polkadot-statement-distribution",
    "polkadot-approval-distribution",
    "kvdb-rocksdb"
]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
polkadot-native = [ "node-runtime", "polkadot-client/polkadot" ]

runtime-benchmarks = [
    "node-runtime/runtime-benchmarks",
]
try-runtime = [
    "node-runtime/try-runtime",
]
malus = ["full-node"]
disputes = ["polkadot-node-core-dispute-coordinator/disputes"]