[package]
name = "fp-consensus"
version = "0.1.0"
edition = "2018"

[dependencies]
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.8", default-features = false }

[features]
default = ["std"]
std = [
    "sp-std/std",
    "sp-runtime/std",
    "sp-core/std",
    "codec/std",
    "ethereum/std",
    "rlp/std",
    "sha3/std",
]
