[package]
name = "fp-precompile"
version = "0.0.2"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true }
primitive-types = { version = "0.9.0", default-features = false }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f", default-features = false}
frame-support = { git = "https://github.com/paritytech/substrate", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f", default-features = false }
#sp-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f", default-features = false }
evm = { version = "0.27.0", default-features = false, features = ["with-codec"] }
impl-trait-for-tuples = "0.1"
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.11", default-features = false }


[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    "primitive-types/std",
    "ethereum/std",
    "ethereum-types/std",
    "evm/std",
    "evm/with-serde",
]