[package]
name = "realis-primitives"
version = "0.0.2"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.133", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
primitive-types = { version = "0.10.1", default-features = false }
derive_more = "0.99.17"
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false}
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
impl-trait-for-tuples = "0.2"
serde_repr = "0.1.7"


[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    "primitive-types/std",
]
