[package]
name = "realis-primitives"
version = "0.0.2"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.133", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false}
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
impl-trait-for-tuples = "0.2"
serde_repr = "0.1.7"


[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "scale-info/std",
    "sp-runtime/std",
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    "sp-std/std",
]
