[package]
name = "fp-rpc"
version = "2.1.0"
authors = ["Parity Technologies <admin@parity.io"]
edition = "2018"
description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Substrate."
license = "Apache-2.0"

[dependencies]
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
sp-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
realis-primitives = { version = "0.0.2", default-features = false, path = "../../primitives" }
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.11", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-api/std",
    "realis-primitives/std",
    "ethereum/std",
    "ethereum-types/std",
    "codec/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
]