[package]
name = "pallet-evm-test-vector-support"
version = "1.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/frontier/"
description = "Test vector support for EVM pallet."

[dependencies]
hex = { version = "0.4.0", optional = true }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
evm = { version = "0.27.0", default-features = false, features = ["with-codec"] }
realis-primitives = { version = "0.0.2", default-features = false, path = "../../../primitives" }

[features]
default = ["std"]
std = [
	"hex",
	"serde",
	"serde_json",
	"evm/std",
	"realis-primitives/std",
]
