[package]
name = "realis-game-api-rpc"
version = '0.0.1'
authors = ['exlead@gmail.com']
edition = '2018'

[dependencies]
codec = { package = "parity-scale-codec", version = "2" }
jsonrpc-core = "15"
jsonrpc-core-client = "15"
jsonrpc-derive = "15"
serde = { version = "1", features = ["derive"] }

sp-api = { git = "https://github.com/paritytech/substrate", rev = "0bda86540d44b09da6f1ea6656f3f52d5447db81" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", rev = "0bda86540d44b09da6f1ea6656f3f52d5447db81" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "0bda86540d44b09da6f1ea6656f3f52d5447db81" }
sp-rpc = { git = "https://github.com/paritytech/substrate", rev = "0bda86540d44b09da6f1ea6656f3f52d5447db81" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "0bda86540d44b09da6f1ea6656f3f52d5447db81" }
realis-game-api-rpc-runtime-api = {version = "0.1.0", path = "./runtime-api"}