[package]
name = "pallet-evm-precompile-dispatch"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/frontier/"
description = "DISPATCH precompiles for EVM pallet."

[dependencies]
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "4cb42231b31ed0dda753144f1e2958b7c78f381f" }
pallet-evm = { version = "0.0.1", default-features = false, path = "../.." }
realis-primitives = { version = "0.0.2", default-features = false, path = "../../../../primitives" }
evm = { version = "0.27.0", default-features = false, features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-evm/std",
	"realis-primitives/std",
	"evm/std",
	"codec/std",
]
