[package]
name = "realis-game-api-rpc-runtime-api"
version = "0.1.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", rev = "0bda86540d44b09da6f1ea6656f3f52d5447db81", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "0bda86540d44b09da6f1ea6656f3f52d5447db81", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "0bda86540d44b09da6f1ea6656f3f52d5447db81", default-features = false }
realis-primitives = { version = "0.0.2", path = "../../../../primitives/realis"}

[features]
default = ["std"]
std = [
    "sp-api/std",
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
]